--- a/deployment.yml
+++ b/deployment.yml
@@ -17,6 +17,7 @@ kind: Deployment
 metadata:
   name: gke-test
 spec:
+  progressDeadlineSeconds: 3600
   replicas: 1
   selector:
     matchLabels:
