--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ praw==7.4.0
 pyvis==0.1.9
 streamlit==0.89.0
 wordcloud==1.8.1
+azure-cognitiveservices-personalizer==0.1.0
+git+https://github.com/PrithivirajDamodaran/Parrot_Paraphraser.git
